updating Changes file

--- a/Changes
+++ b/Changes
@@ -2,4 +2,9 @@ Revision history for Devel-REPL-Plugin-DataPrinter
 
 {{$NEXT}}
 
+    - updating version dependency
+    - improving documentation
+
+0.001   2011-02-14
+
     - releasing on an unsuspecting world
