--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Devel-REPL-Plugin-DataPrinter
 
 {{$NEXT}}
 
+    - new custom option: 'stringify' to control
+      object stringification (Zaki Mughal)
+
 0.004     2012-08-14
 
     - new feature: custom configuration (Rob Hoelz)
